# ds_battle_crypto_hack

./: grid_search.ipynb  ml try.ipynb  ml_attempt_2.ipynb  pyproject.toml  simulator.py  strategy.py
submit/: pyproject.toml  strategy.py
