[tool.poetry]
name = "hackathon_baseline_try"
version = "0.1.0"
description = "Inverse Mean"
authors = ["KirKirich <ivadik2323@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
plotly = "^5.8.2"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
